[project]
name = "economy"
version = "0.1.0"
description = "API and analytics to Economic Statistics"
authors = [
    {name = "Cormac Hollingsworth"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

