[project]
name = "economy"
version = "0.1.0"
description = "API and analytics to Economic Statistics"
authors = [
    {name = "Cormac Hollingsworth"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "rateslib (>=2.0.1,<3.0.0)",
    "quantlib (>=1.39,<2.0)",
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

